Fix white space at bottom of page on mobile devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,10 +40,20 @@
 
   html {
     @apply scroll-smooth;
+    overflow-x: hidden;
+    height: 100%;
+    width: 100%;
+    position: relative;
   }
 
   body {
     @apply bg-white text-primary-dark antialiased;
+    overflow-x: hidden;
+    min-height: 100%;
+    width: 100%;
+    position: relative;
+    margin: 0;
+    padding: 0;
   }
 
   h1, h2, h3, h4, h5, h6 {
